--- a/dflt new/templates/add.html
+++ b/dflt new/templates/add.html
@@ -138,6 +138,8 @@
                 <table id="displayTable">
                     <!-- Table Rows go here -->
                 </table>
+                
+
             </div>
 <!--  this is the paste part -->
         
@@ -182,7 +184,7 @@
                     </div>
                     
                 </div>
-                <button type="button" class="finish-btn" onclick="showTable()">Finish</button>
+                <button type="button" class="finish-btn" onclick="showTable2()">Finish</button>
                 <table id="displayTable2">
                     <!-- Table Rows go here -->
                 </table>
