--- a/dflt new/templates/search_data.html
+++ b/dflt new/templates/search_data.html
@@ -1,30 +1,52 @@
-<div class="step-progress">
-    <div id="step1" class="step">
-      <div class="step-number">1</div>
-      <div class="step-desc">步骤1</div>
-    </div>
-    <div id="step2" class="step">
-      <div class="step-number">2</div>
-      <div class="step-desc">步骤2</div>
-    </div>
-    <div id="step3" class="step">
-      <div class="step-number">3</div>
-      <div class="step-desc">步骤3</div>
-    </div>
-  </div>
-  
-  <div class="step-content">
-    <div id="step-content1">
-      <!-- 这里放置步骤1的表单 -->
-    </div>
-    <div id="step-content2">
-      <!-- 这里放置步骤2的表单 -->
-    </div>
-    <div id="step-content3">
-      <!-- 这里放置步骤3的表单 -->
-    </div>
-  </div>
-  
-  <button id="prevBtn" onclick="changeStep(-1)">上一步</button>
-  <button id="nextBtn" onclick="changeStep(1)">下一步</button>
-  
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title>ADD DATA PAGE</title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!-- custom css -->
+        <link rel="stylesheet" href="assets/css/main.css">
+    </head>
+    <body>
+        <nav class = "navbar bg-white">
+            <div class="container">
+                <div class = "navbar-content">
+                    <div class = "brand-and-toggler">
+                        <a href = "/" class = "navbar-brand">
+                            <img src = "assets/images\curriculum-vitae.png" alt = "" class = "navbar-brand-icon">
+                            <span class = "navbar-brand-text">Shear Test</span>
+                        </a>
+                       
+                    </div>
+                    <div class = "brand-and-toggler">
+                      <a href = "/" class = "navbar-brand">
+                          <img src = "assets/images\curriculum-vitae.png" alt = "" class = "navbar-brand-icon">
+                          <span class = "navbar-brand-text">Hirox</span>
+                      </a>
+                     
+                  </div>
+                  <div class = "brand-and-toggler">
+                    <a href = "/" class = "navbar-brand">
+                        <img src = "assets/images\curriculum-vitae.png" alt = "" class = "navbar-brand-icon">
+                        <span class = "navbar-brand-text">Drop Shcok</span>
+                    </a>
+                   
+                </div>
+                </div>
+            </div>
+        </nav>
+
+        <
+
+        <!-- jquery cdn -->
+        <script src="https://code.jquery.com/jquery-3.6.4.js" integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E=" crossorigin="anonymous"></script>
+        <!-- jquery repeater cdn -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.repeater/1.2.1/jquery.repeater.js" integrity="sha512-bZAXvpVfp1+9AUHQzekEZaXclsgSlAeEnMJ6LfFAvjqYUVZfcuVXeQoN5LhD7Uw0Jy4NCY9q3kbdEXbwhZUmUQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+        <!-- custom js -->
+        <script src = "assets/js/script.js"></script>
+        <!-- app js -->
+        <script src="assets/js/app.js"></script>
+    </body>
+</html>
