--- a/dflt new/templates/add.html
+++ b/dflt new/templates/add.html
@@ -309,6 +309,13 @@
             </div>
         </section>
 
+        <section class = "print-btn-sc">
+            <div class = "container">
+                <button type = "button" class = "print-btn btn btn-primary" onclick="sendNameToBackend()">upload to database</button>
+            </div>
+        </section>
+
+
 
 
         
