--- a/dflt new/templates/add.html
+++ b/dflt new/templates/add.html
@@ -311,24 +311,18 @@
 
         <section class = "print-btn-sc">
             <div class = "container">
+                <button type = "button" class = "print-btn btn btn-primary" onclick="saveCVAsImage()">add picture</button>
+            </div>
+        </section>
+
+        <section class = "print-btn-sc">
+            <div class = "container">
                 <button type = "button" class = "print-btn btn btn-primary" onclick="sendNameToBackend()">upload to database</button>
             </div>
         </section>
 
-
-
-
         
 
-        
-
-       
-
-
-        
-       
-       
-        
 
         <!-- jquery cdn -->
         <script src="https://code.jquery.com/jquery-3.6.4.js" integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E=" crossorigin="anonymous"></script>
@@ -338,5 +332,7 @@
         <script src = "assets/js/script.js"></script>
         <!-- app js -->
         <script src="assets/js/app.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.5.0-beta4/html2canvas.min.js"></script>
+
     </body>
 </html>
