--- a/dflt new/templates/add.html
+++ b/dflt new/templates/add.html
@@ -33,7 +33,7 @@
                     <div class=" form-label">
                         <label for="typeSection" class="form-label">Select Type</label>
                         <select id="typeSection"   class="form-control"   onchange="toggleSections()" required>
-                            <option value="">Select one type</option>
+                           
                             <option value="bga">BGA</option>
                             <option value="non-bga">Non-BGA</option>
                             <option value="other">Other</option>
@@ -198,11 +198,23 @@
                 <input name = "reflow_time" type = "text" class = "form-control email" id = "" onkeyup="generateCV()" placeholder="e.g. 30">
                 <span class="form-text"></span>
             </div>
-            <div class = "form-elem">
-                <label for = "" class = "form-label">test_result</label>
-                <input name = "test_result" type = "file" class = "form-control image" id = "" accept = "image/*" onchange="previewImage()">
+            <div class="form-elem">
+                <div class="form-label">
+                    <label for="typeSection" class="form-label">test_result_type</label>
+                    <select id="typeSection2" class="form-control" onchange="toggleSections()" required>
+                        <option value="hirox">hirox</option>
+                        <option value="shear_test">shear test</option>
+                        <option value="drop_shock">drop shock</option>
+                    </select>
+                </div>
+                <label for="zipResult" class="form-label">Upload ZIP File</label>
+                <input name="zip_result" type="file" class="form-control image" id="zipResult" accept=".zip" onchange="handleZipFile()">
+                <div id="uploadStatus">Uploading</div>
+
+                
             </div>
-        
+            
+
         </div>
     
 
@@ -333,6 +345,8 @@
         <!-- app js -->
         <script src="assets/js/app.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.5.0-beta4/html2canvas.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.7.1/jszip.min.js"></script>
+
 
     </body>
 </html>
