finish the adding test result from computer

--- a/dflt new/assets/css/main.css
+++ b/dflt new/assets/css/main.css
@@ -28,6 +28,9 @@ html{
 body{
     font-size: 1.6rem;
     font-family: var(--font-poppins);
+    height:auto
+ 
+    
 }
 
 button{
@@ -42,7 +45,7 @@ button{
 }
 
 img{
-    width: 100%;
+    width: 150%;
     display: block;
 }
 
