--- a/dflt new/templates/search_data.html
+++ b/dflt new/templates/search_data.html
@@ -15,22 +15,22 @@
                 <div class = "navbar-content">
                     <div class = "brand-and-toggler">
                         <a href = "/" class = "navbar-brand">
-                            <img src = "assets/images\curriculum-vitae.png" alt = "" class = "navbar-brand-icon">
+                            <img src = "assets/images\upper.jpg" alt = "" class = "navbar-brand-icon">
                             <span class = "navbar-brand-text">Shear Test</span>
                         </a>
                        
                     </div>
                     <div class = "brand-and-toggler">
                       <a href = "/" class = "navbar-brand">
-                          <img src = "assets/images\curriculum-vitae.png" alt = "" class = "navbar-brand-icon">
+                          <img src = "assets/images\upper.jpg" alt = "" class = "navbar-brand-icon">
                           <span class = "navbar-brand-text">Hirox</span>
                       </a>
                      
                   </div>
                   <div class = "brand-and-toggler">
                     <a href = "/" class = "navbar-brand">
-                        <img src = "assets/images\curriculum-vitae.png" alt = "" class = "navbar-brand-icon">
-                        <span class = "navbar-brand-text">Drop Shcok</span>
+                        <img src = "assets/images\upper.jpg" alt = "" class = "navbar-brand-icon">
+                        <span class = "navbar-brand-text">Drop Shock</span>
                     </a>
                    
                 </div>
