--- a/dflt new/templates/index.html
+++ b/dflt new/templates/index.html
@@ -15,7 +15,7 @@
                 <div class = "navbar-content">
                     <div class = "brand-and-toggler">
                         <a href = "/" class = "navbar-brand">
-                            <img src = "assets/images/curriculum-vitae.png" alt = "" class = "navbar-brand-icon">
+                            <img src = "assets/images/upper.jpg" alt = "" class = "navbar-brand-icon">
                             <span class = "navbar-brand-text">DFLT <span>DATA</span>
                         </a>
                     </div>
