this add the hirox picture from last part
need to add more details, just show

--- a/dflt new/templates/search_data.html
+++ b/dflt new/templates/search_data.html
@@ -20,25 +20,30 @@
                         </a>
                        
                     </div>
-                    <div class = "brand-and-toggler">
+                    <!-- <div class = "brand-and-toggler">
                       <a href = "/" class = "navbar-brand">
                           <img src = "assets/images\upper.jpg" alt = "" class = "navbar-brand-icon">
                           <span class = "navbar-brand-text">Hirox</span>
                       </a>
+                      <h1>Here is the plot:</h1>
+                        <img src="/plot" alt="Plot Image">
                      
-                  </div>
-                  <div class = "brand-and-toggler">
+                  </div> -->
+                  <!-- <div class = "brand-and-toggler">
                     <a href = "/" class = "navbar-brand">
                         <img src = "assets/images\upper.jpg" alt = "" class = "navbar-brand-icon">
                         <span class = "navbar-brand-text">Drop Shock</span>
                     </a>
                    
-                </div>
+                </div> -->
                 </div>
             </div>
         </nav>
+        <h1>Here is the plot:</h1>
+                        <img src="/plot" alt="Plot Image">
+                     
 
-        <
+        
 
         <!-- jquery cdn -->
         <script src="https://code.jquery.com/jquery-3.6.4.js" integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E=" crossorigin="anonymous"></script>
