--- a/dflt new/templates/index.html
+++ b/dflt new/templates/index.html
@@ -29,7 +29,7 @@
                     <h6 class = "text-uppercase text-blue-dark fs-14 fw-6 ls-1"></h6>
                     <h1 class = "lg-title">THIS IS ABOUT DFLT TESTING DATA </h1>
                     <p class = "text-dark fs-18"> try now for free!</p>
-                    <a href = "/search" class = "btn btn-primary text-uppercase">SEARCH MY DATA </a>
+                    <a href = "/try" class = "btn btn-primary text-uppercase">SEARCH MY DATA </a>
                     <a href = "/add" class = "btn btn-primary text-uppercase">ADD MY DATA </a>
                     <img src = "assets/images/logo.jpg">
                 </div>
