--- a/dflt new/templates/add.html
+++ b/dflt new/templates/add.html
@@ -58,11 +58,21 @@
                     toggleSections();
                 </script>
 
-                <div class = "form-elem">
-                    <label for = "" class = "form-label">Start Date</label>
-                    <input name = "edu_start_date" type = "date" class = "form-control edu_start_date" id = "" onkeyup="generateCV()">
+                <div class="form-elem">
+                    <label for="start_date" class="form-label">Start Date</label>
+                    <span class="form-control edu_start_date" id="start_date"></span>
                     <span class="form-text"></span>
+                    <script>
+                        let startDateElement = document.getElementById('start_date');
+                        let today = new Date();
+                        let year = today.getFullYear();
+                        let month = ("0" + (today.getMonth() + 1)).slice(-2);
+                        let day = ("0" + today.getDate()).slice(-2);
+                        startDateElement.textContent = `${year}-${month}-${day}`;
+                    </script>
                 </div>
+
+
             </div>
         </div>
 
