--- a/dflt new/templates/resume.html
+++ b/dflt new/templates/resume.html
@@ -2,12 +2,20 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Plot</title>
+  <title>test results</title>
   <script src="https://cdn.bokeh.org/bokeh/release/bokeh-2.3.3.min.js"></script>
 </head>
 <body>
-  <h1>Here is the plot:</h1>
+  <h1>Here is the hirox result of this sample:</h1>
   {{ script|safe }}
   {{ div|safe }}
+</body>
+<body>
+  <h1>Here is the drop shock of this sample:</h1>
+ 
+</body>
+<body>
+  <h1>Here is the shear test result of this sample:</h1>
+
 </body>
 </html>
