--- a/dflt new/templates/add.html
+++ b/dflt new/templates/add.html
@@ -225,9 +225,10 @@
                 </div>
                 
                 <!-- Single Photo Input for Hirox -->
-                <div id="photoInput" style="display: none;">
-                    <label for="singlePhotoResult" class="form-label">Upload Single Photo</label>
-                    <input name="single_photo_result" type="file" class="form-control image" id="singlePhotoResult" accept="image/*" >
+                <div id="photoInput" style="display: none;">                    
+                    <input name="single_photo_result" type="file" class="form-control image" id="singlePhotoResult" accept="image/*" onChange="showsImage(this);">
+                    <img id="displayImage" src="#" alt="Uploaded Image" style="display: none;"/>
+
                 </div>
                 
                 <!-- Number Input for Shear Test and Drop Shock -->
@@ -356,17 +357,12 @@
             </div>
         </section>
 
-        <section class = "print-btn-sc">
-            <div class = "container">
-                <button type = "button" class = "print-btn btn btn-primary" onclick="saveCVAsImage()">add picture</button>
+        <section class="print-btn-sc">
+            <div class="container">
+                <button type="button" class="print-btn btn btn-primary" onclick="combinedFunction();">Add & Upload</button>
             </div>
         </section>
-
-        <section class = "print-btn-sc">
-            <div class = "container">
-                <button type = "button" class = "print-btn btn btn-primary" onclick="sendNameToBackend()">upload to database</button>
-            </div>
-        </section>
+        
 
         
 
