--- a/dflt data/templates/new_add.html
+++ b/dflt data/templates/new_add.html
@@ -258,12 +258,12 @@
                                         <div class = "cols-2">
                                             <div class = "form-elem">
                                                 <label for = "" class = "form-label">Title</label>
-                                                <input name = "achieve_title" type = "text" class = "form-control achieve_title" id = "" onkeyup="generateCV()" placeholder="e.g. description" value="type">
+                                                <input name = "achieve_title" type = "text" class = "form-control achieve_title" id = "TYPE" onkeyup="generateCV()" placeholder="e.g. description" value="type">
                                                 <span class="form-text"></span>
                                             </div>
                                             <div class = "form-elem">
                                                 <label for = "" class = "form-label">Description</label>
-                                                <input name = "achieve_description" type = "text" class = "form-control achieve_description" id = "" onkeyup="generateCV()" placeholder="e.g. something" value="description">
+                                                <input name = "achieve_description" type = "text" class = "form-control achieve_description" id = "DESCRIPTION" onkeyup="generateCV()" placeholder="e.g. something" value="description">
                                                 <span class="form-text"></span>
                                             </div>
                                         </div>
