--- a/dflt data/templates/index.html
+++ b/dflt data/templates/index.html
@@ -30,7 +30,7 @@
                     <h1 class = "lg-title">THIS IS ABOUT DFLT TESTING DATA </h1>
                     <p class = "text-dark fs-18"> try now for free!</p>
                     <a href = "/show_data" class = "btn btn-primary text-uppercase">SEE ALL DATA  </a>
-                    <a href = "/search_bar" class = "btn btn-primary text-uppercase">SEARCH FROM DATA </a>
+                    <a href = "/search" class = "btn btn-primary text-uppercase">SEARCH FROM DATA </a>
                     <a href = "/add" class = "btn btn-primary text-uppercase">ADD MY DATA </a>
                     <img src = "assets/images/logo.jpg">
                 </div>
